@@ -1,0 +1,8 @@
+export type Cache = {
+    ts: number,
+    data: any
+}
+
+export type CacheData = {
+    latestVersion?: Cache
+}
