@@ -1,11 +1,12 @@
 import path from "path";
-import { getRoamingFolder, getRoamingPath, getTempFolder } from ".";
+import { CacheData, getRoamingFolder, getRoamingPath, getTempFolder } from ".";
 import * as fs from "fs";
 import { SettingsData } from "./";
 import * as ini from "ini";
 import { IConnect, Logger, RESTConnect, RFCConnect, Plugin, getGlobalNodeModules, PluginModule } from "trm-commons";
 import { ISystemConnector, RESTSystemConnector, RFCSystemConnector } from "trm-core";
 
+const CACHE_FILE_NAME = ".cache";
 const SETTINGS_FILE_NAME = "settings.ini";
 
 class RESTConnectExtended extends RESTConnect {
@@ -30,12 +31,15 @@ export class Context {
 
     private _pluginsLoaded: boolean = false;
     private _settings: SettingsData;
+    private _cache: CacheData;
     private _connections: IConnect[] = [];
     private _plugins: PluginModule[] = [];
 
     constructor() {
         //load settings
         this._settings = this.getSettingsInternal();
+        //load cache
+        this._cache = this.getCacheInternal();
         if (typeof (this._settings.r3transDocker) !== 'boolean') {
             if (process.platform === 'darwin') {
                 Logger.info(`R3trans defaults to docker in darwin os.`, true);
@@ -46,6 +50,10 @@ export class Context {
 
     public getSettings(): SettingsData {
         return this._settings;
+    }
+
+    public getCache(): CacheData {
+        return this._cache;
     }
 
     public async load() {
@@ -75,6 +83,15 @@ export class Context {
         this.generateSettingsFile(this._settings, filePath);
     }
 
+    public setCache(key: string, value: any): void {
+        const filePath = this.getCacheFilePath();
+        this._cache[key] = {
+            ts: Date.now(),
+            data: value
+        };
+        this.generateCacheFile(this._cache, filePath);
+    }
+
     private cloneInstance<T>(obj: T): T {
         return Object.assign(Object.create(Object.getPrototypeOf(obj)), obj);
     }
@@ -85,6 +102,10 @@ export class Context {
 
     private getSettingsFilePath(): string {
         return path.join(getRoamingFolder(), SETTINGS_FILE_NAME);
+    }
+
+    private getCacheFilePath(): string {
+        return path.join(getRoamingFolder(), CACHE_FILE_NAME);
     }
 
     private getDefaultSettings(): SettingsData {
@@ -126,8 +147,23 @@ export class Context {
         return defaultSettings;
     }
 
+    private getCacheInternal(): CacheData {
+        const filePath = this.getCacheFilePath();
+        if (fs.existsSync(filePath)) {
+            try {
+                return JSON.parse(fs.readFileSync(filePath).toString());
+            } catch (e) { }
+        }
+        this.generateCacheFile({}, filePath);
+        return {};
+    }
+
     private generateSettingsFile(data: SettingsData, filePath: string): void {
         fs.writeFileSync(filePath, ini.encode(data), { encoding: 'utf8', flag: 'w' });
+    }
+
+    private generateCacheFile(data: CacheData, filePath: string): void {
+        fs.writeFileSync(filePath, JSON.stringify(data), { encoding: 'utf8', flag: 'w' });
     }
 
     public static getInstance(): Context {
