@@ -3,13 +3,21 @@ import { getClientVersion } from './getClientVersion';
 import chalk from 'chalk';
 import { getNpmPackageLatestVersion } from './getNpmPackageLatestVersion';
 import { Logger } from "trm-commons";
+import { Context } from "./Context";
 
 export async function checkCliUpdate(print: boolean): Promise<{
     localVersion: string,
     latestVersion: string
 }> {
     try {
-        const latestVersion = await getNpmPackageLatestVersion('trm-client');
+        var latestVersion: string;
+        const cache = Context.getInstance().getCache().latestVersion;
+        if(cache && cache.ts && Date.now() - cache.ts <= 60_000){
+            latestVersion = cache.data;
+        }else{
+            latestVersion = await getNpmPackageLatestVersion('trm-client');
+            Context.getInstance().setCache('latestVersion', latestVersion);
+        }
         const localVersion = getClientVersion();
         const versionDiff = diff(localVersion, latestVersion);
         if ((versionDiff === 'minor' || versionDiff === 'major') && gt(latestVersion, localVersion)) {
